--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -77,6 +77,7 @@
     "slash": "^2.0.0",
     "sleep-promise": "^8.0.1",
     "tailwindcss": "^1.0",
+    "tailwindcss-dir": "^4.0.0",
     "universal-cookie": "^4.0.3",
     "walk": "^2.3.14",
     "walkdir": "^0.4.1"
