--- a/packages/bodiless-accessibility/package.json
+++ b/packages/bodiless-accessibility/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/accessibility",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "Accessibility tools for bodiless",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
