--- a/packages/bodiless-accordion/package.json
+++ b/packages/bodiless-accordion/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/accordion",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "Basic accordion component.",
   "author": "Guilherme Zeni <gzeni@its.jnj.com>",
