--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/cli",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "A cli tool for Bodiless-JS",
   "author": "Chris Oden <coden@its.jnj.com>",
