--- a/packages/bodiless-documentation/package.json
+++ b/packages/bodiless-documentation/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/documentation",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "A tool to aggregate markdown files for rendering by docsify",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
