--- a/packages/bodiless-layouts-ui/package.json
+++ b/packages/bodiless-layouts-ui/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/layouts-ui",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "Default UI for BodilessJS Layouts",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
