--- a/packages/bodiless-migration-tool/package.json
+++ b/packages/bodiless-migration-tool/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/migration-tool",
+  "sideEffects": false,
   "version": "0.2.10",
   "author": "Andrei Beliayeu <abeliaye@its.jnj.com>",
   "bin": {
