--- a/packages/bodiless-psh/package.json
+++ b/packages/bodiless-psh/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/psh",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "Provides cli tool for initializing a bodiless project on platform.sh",
   "author": "Chris Oden <coden@its.jnj.com>",
