--- a/packages/bodiless-richtext/package.json
+++ b/packages/bodiless-richtext/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/richtext",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "Provide Rich Text Component",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
