--- a/packages/bodiless-table/package.json
+++ b/packages/bodiless-table/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/table",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "Provide a Bodiless table component and HOC to make it editable",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
