--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bodiless/fclasses",
+  "sideEffects": false,
   "version": "0.2.10",
   "description": "Allows for the injection of functional class into components.",
   "author": "Chris Oden <coden@its.jnj.com>",
