--- a/packages/gatsby-plugin-ssi/package.json
+++ b/packages/gatsby-plugin-ssi/package.json
@@ -23,7 +23,7 @@
     "replace-in-file": "^4.2.0"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0",
+    "gatsby": "3.13.1",
     "react": "^16.11.0"
   }
 }
