--- a/packages/gatsby-theme-bodiless/tsconfig.json
+++ b/packages/gatsby-theme-bodiless/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
     "rootDir": "src",
     "outDir": ".",
     "baseUrl": ".",
