--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "outDir": "lib",
     "moduleResolution": "node",
-    "target": "es5",
-    "module": "commonjs",
+    "target": "ES2015",
+    "module": "ES2015",
     "skipDefaultLibCheck": true,
     "noUnusedLocals": true,
     "lib": ["es7", "dom"],
