Remove Tailwindcss from the bundle

--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -96,7 +96,6 @@
     "sleep-promise": "^8.0.1",
     "stream-browserify": "^3.0.0",
     "path-browserify": "^1.0.1",
-    "tailwindcss": "^2.0.2",
     "universal-cookie": "^4.0.3",
     "walk": "^2.3.14",
     "walkdir": "^0.4.1"
@@ -105,5 +104,8 @@
     "gatsby": "3.13.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^2.0.2"
   }
 }
