--- a/packages/bodiless-organisms/package.json
+++ b/packages/bodiless-organisms/package.json
@@ -45,11 +45,11 @@
     "mobx-react-lite": "^1.3.1",
     "react-burger-menu": "^2.6.13",
     "react-tag-autocomplete": "^5.12.1",
-    "tailwindcss-aspect-ratio": "^3.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@types/uuid": "^3.4.4"
+    "@types/uuid": "^3.4.4",
+    "tailwindcss-aspect-ratio": "^3.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.4"
