--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -36,13 +36,15 @@
     "autoprefixer": "^9.8.6",
     "informed": "~3.13.1",
     "lodash": "^4.17.19",
-    "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2",
-    "tailwindcss-dir": "^4.0.0"
+    "postcss": "^8.2.4"
   },
   "peerDependencies": {
     "rc-tooltip": "^5.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },
+  "devDependencies": {
+    "tailwindcss": "^2.0.2",
+    "tailwindcss-dir": "^4.0.0"
   }
 }
