--- a/packages/bodiless-richtext/package.json
+++ b/packages/bodiless-richtext/package.json
@@ -48,6 +48,7 @@
     "slate-history": "^0.59.0",
     "slate-hyperscript": "^0.59.0",
     "slate-react": "^0.59.0",
+    "escape-html": "1.0.3",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@types/rc-tooltip": "^3.7.1",
     "@types/slate-plain-serializer": "^0.7.0",
-    "@types/uuid": "^3.4.4"
+    "@types/uuid": "^3.4.4",
+    "@types/escape-html": "1.0.1"
   }
 }
