--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -65,6 +65,8 @@
     "autoprefixer": "^10.0.0",
     "axios": "^0.21.0",
     "crypto-browserify": "^3.12.0",
+    "babel-plugin-preval": "5.0.0",
+    "common-tags": "^1.8.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "fast-glob": "^3.2.5",
@@ -101,6 +103,7 @@
     "walkdir": "^0.4.1"
   },
   "devDependencies": {
+    "@types/common-tags": "^1.8.0",
     "tailwindcss": "^2.0.2"
   },
   "peerDependencies": {
