--- a/packages/gatsby-theme-bodiless/tsconfig.json
+++ b/packages/gatsby-theme-bodiless/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "rootDir": "src",
-    "outDir": ".",
+    "outDir": "./cjs",
     "baseUrl": ".",
     "allowJs": false
   },
