--- a/sites/bodiless-contentful/package.json
+++ b/sites/bodiless-contentful/package.json
@@ -59,7 +59,7 @@
     "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.0",
     "react-mde": "^11.0.0",
-    "@contentful/app-sdk": "^4.9.0",
+    "@contentful/app-sdk": "^4.13.0",
     "@contentful/react-apps-toolkit": "^1.2.8",
     "@bodiless/contentful-editor": "^1.0.0-rc.22",
     "@vital/contentful-editor": "^1.0.0-rc.22"
@@ -87,7 +87,7 @@
     "prestart": "run-s build:env-vars",
     "serve": "gatsby serve",
     "serve:docs": "docsify serve ./doc",
-    "start": "run-p -r dev-frontend",
+    "start": "run-p -r start-contentful",
     "start-contentful": "webpack serve --mode=development --config webpack.contentful.config.js",
     "build-contentful": "webpack --config webpack.contentful.config.js"
   },
@@ -102,9 +102,10 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.0.0",
     "webpack-cli": "^4.10.0",
-    "webpack": "^5",
+    "webpack": "^5.69.1",
     "webpack-dev-server": "3.x",
-    "html-webpack-plugin": "^5.5.0"
-
+    "html-webpack-plugin": "^5.5.0",
+    "@bodiless/webpack": "^1.0.0-rc.22",
+    "postcss-loader": "5.3.0"
   }
 }
