--- a/sites/bodiless-contentful/package.json
+++ b/sites/bodiless-contentful/package.json
@@ -73,13 +73,13 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "npm-run-all build:env-vars build-contentful",
+    "build": "npm-run-all clean build:env-vars build-contentful",
     "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
     "build:search": "create-search-index",
     "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
     "check": "tsc -p ./tsconfig.check.json",
-    "clean": "gatsby clean",
+    "clean": "rimraf \"public/*\"",
     "dev-backend": "bodiless-backend",
     "dev-frontend": "gatsby develop",
     "docs": "run-s build:docs serve:docs",
