--- a/sites/bodiless-contentful/package.json
+++ b/sites/bodiless-contentful/package.json
@@ -73,23 +73,19 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "npm-run-all clean build:env-vars build-contentful",
+    "build": "cross-env NODE_ENV=development npm-run-all clean build:env-vars build-contentful",
     "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
     "build:search": "create-search-index",
     "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "rimraf \"public/*\"",
-    "dev-backend": "bodiless-backend",
-    "dev-frontend": "gatsby develop",
     "docs": "run-s build:docs serve:docs",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
     "prestart": "run-s build:env-vars",
-    "serve": "gatsby serve",
-    "serve:docs": "docsify serve ./doc",
     "start": "run-p -r start-contentful",
     "start-contentful": "webpack serve --mode=development --config webpack.contentful.config.js",
-    "build-contentful": "webpack --config webpack.contentful.config.js"
+    "build-contentful": "webpack --env packaging --mode=development --config webpack.contentful.config.js"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
