--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -116,8 +116,8 @@
       "@bodiless/fclasses/*": ["fclasses/src/*"],
       "@bodiless/gatsby-theme-bodiless": ["gatsby-theme-bodiless/src"],
       "@bodiless/gatsby-theme-bodiless/*": ["gatsby-theme-bodiless/src/*"],
-      "@bodiless/contentful-editor": ["bodiless-contentful-editor/src"],
-      "@bodiless/contentful-editor/*": ["bodiless-contentful-editor/src/*"]
+      "@bodiless/contentful": ["bodiless-contentful/src"],
+      "@bodiless/contentful/*": ["bodiless-contentful/src/*"]
     }
   }
 }
