--- a/packages/bodiless-contentful/package.json
+++ b/packages/bodiless-contentful/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/contentful-editor",
+  "name": "@bodiless/contentful",
   "sideEffects": false,
   "version": "1.0.0-rc.22",
   "description": "",
@@ -39,6 +39,7 @@
     "@contentful/react-apps-toolkit": "^1.2.8",
     "axios": "^0.21.0",
     "contentful-management": "^10.19.0",
+    "contentful": "^9.2.11",
     "@contentful/app-sdk": "^4.13.0"
   }
 }
