--- a/packages/vital-contentful-editor/package.json
+++ b/packages/vital-contentful-editor/package.json
@@ -36,7 +36,7 @@
     "@bodiless/page": "^1.0.0-rc.22",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.22",
     "@bodiless/components": "^1.0.0-rc.22",
-    "@bodiless/contentful-editor": "^1.0.0-rc.22",
+    "@bodiless/contentful": "^1.0.0-rc.22",
     "@bodiless/vital-elements": "^1.0.0-rc.22",
     "@bodiless/vital-templates": "^1.0.0-rc.22",
     "@bodiless/i18n": "^1.0.0-rc.22"
