Remove dependency from css provided by @bodiless/ui because it is too big

--- a/sites/bodiless-contentful/package.json
+++ b/sites/bodiless-contentful/package.json
@@ -12,7 +12,9 @@
     "@bodiless/backend": "^1.0.0-rc.22",
     "@bodiless/cli": "^1.0.0-rc.22",
     "@bodiless/components": "^1.0.0-rc.22",
+    "@bodiless/components-ui": "^1.0.0-rc.22",
     "@bodiless/core": "^1.0.0-rc.22",
+    "@bodiless/core-ui": "^1.0.0-rc.22",
     "@bodiless/documentation": "^1.0.0-rc.22",
     "@bodiless/fclasses": "^1.0.0-rc.22",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.22",
