Update package.json dependencies

--- a/packages/bodiless-layouts-ui/package.json
+++ b/packages/bodiless-layouts-ui/package.json
@@ -31,10 +31,10 @@
     "@bodiless/layouts": "^1.0.0-rc.29",
     "@bodiless/ui": "^1.0.0-rc.29",
     "re-resizable": "^4.11.0",
-    "react-sortable-hoc": "^2.0.0"
+    "@dnd-kit/sortable": "^7.0.1"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
