--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -41,8 +41,7 @@
     "common-tags": "^1.8.0",
     "copyfiles": "^2.1.1",
     "debug": "^4.1.1",
-    "enzyme": "^3.9.0",
-    "informed": "^3.34.0",
+    "informed": "^4.36.2",
     "lodash": "^4.17.19",
     "rc-tooltip": "^5.1.1",
     "react-contenteditable": "^3.2.6",
@@ -53,11 +52,12 @@
     "@types/react-helmet": "^6.1.0",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@types/common-tags": "^1.8.0",
     "@types/rc-tooltip": "^3.7.1",
     "@types/uuid": "^3.4.4"
