--- a/packages/bodiless-curator/package.json
+++ b/packages/bodiless-curator/package.json
@@ -36,9 +36,9 @@
     "lodash": "^4.17.19"
   },
   "devDependencies": {
-    "enzyme": "^3.9.0"
+    "@testing-library/react": "^13.4.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^18.0.0"
   }
 }
