--- a/packages/bodiless-ga4/package.json
+++ b/packages/bodiless-ga4/package.json
@@ -39,10 +39,10 @@
     "lodash": "^4.17.19"
   },
   "devDependencies": {
-    "enzyme": "^3.9.0"
+    "@testing-library/react": "^13.4.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-helmet": "^6.1.0"
   }
 }
