--- a/packages/bodiless-layouts/package.json
+++ b/packages/bodiless-layouts/package.json
@@ -35,7 +35,7 @@
   },
   "peerDependencies": {
     "mobx-react": "^7.2.1",
-    "react": "^17.0.2"
+    "react": "^18.0.0"
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.29",
@@ -43,17 +43,17 @@
     "@bodiless/fclasses": "^1.0.0-rc.29",
     "axios": "^0.21.0",
     "html2canvas": "^1.0.0-rc.3",
-    "informed": "^3.34.0",
+    "informed": "^4.36.2",
     "lodash": "^4.17.19",
     "md5-hex": "^4.0.0",
     "prop-types": "^15.7.2",
     "rc-tooltip": "^5.1.1",
     "re-resizable": "^4.11.0",
-    "react-sortable-hoc": "^2.0.0",
+    "@dnd-kit/sortable": "^7.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/rc-tooltip": "^3.7.1",
-    "enzyme": "^3.9.0"
+    "@testing-library/react": "^13.4.0"
   }
 }
