--- a/packages/bodiless-navigation/package.json
+++ b/packages/bodiless-navigation/package.json
@@ -45,8 +45,11 @@
   "peerDependencies": {
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.4.0"
   }
 }
