--- a/packages/bodiless-oidc/package.json
+++ b/packages/bodiless-oidc/package.json
@@ -28,11 +28,11 @@
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.29",
     "axios": "^0.21.0",
-    "enzyme": "^3.9.0",
+    "@testing-library/react": "^13.4.0",
     "oidc-client-ts": "2.0.0-rc.2"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
