--- a/packages/bodiless-organisms/package.json
+++ b/packages/bodiless-organisms/package.json
@@ -40,9 +40,8 @@
     "@bodiless/richtext": "^1.0.0-rc.29",
     "@bodiless/richtext-ui": "^1.0.0-rc.29",
     "@types/react-burger-menu": "^2.6.0",
-    "@types/react-tag-autocomplete": "^6.0.0",
     "lodash": "^4.17.19",
-    "react-tag-autocomplete": "^6.0.0",
+    "react-tag-autocomplete": "7.0.0-beta.10",
     "tailwindcss-aspect-ratio": "^3.0.0",
     "uuid": "^3.3.2"
   },
@@ -52,6 +51,6 @@
   "peerDependencies": {
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
-    "react": "^17.0.2"
+    "react": "^18.0.0"
   }
 }
