--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -86,14 +86,14 @@
     "gatsby-plugin-postcss": "5.10.0",
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-robots-txt": "1.7.1",
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-plugin-typescript": "^4.10.1",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-sharp": "^4.10.0",
     "git-branch": "^2.0.1",
     "glob": "^7.1.6",
-    "informed": "^3.34.0",
+    "informed": "^4.36.2",
     "isomorphic-git": "^1.10.1",
     "lodash": "^4.17.19",
     "md5-file": "^5.0.0",
@@ -115,7 +115,7 @@
     "gatsby": "^4.11.2",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
