--- a/packages/bodiless-search/tsconfig.cjs.json
+++ b/packages/bodiless-search/tsconfig.cjs.json
@@ -1,18 +1,20 @@
 {
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
+    "module": "commonjs",
     "rootDir": "src",
-    "outDir": "lib",
-    "baseUrl": "."
+    "outDir": "./lib/cjs",
+    "baseUrl": ".",
+    "allowJs": false
   },
   "include": [
-    "src"
+    "src/scripts",
+    "src/searchTool"
   ],
   "exclude": [
     "lib",
-    "src/**/scripts/**/*.*",
     "node_modules",
     "__tests__/**/*.*",
     "src/**/__tests__/**/*.*"
-  ]
+   ]
 }
