--- a/packages/gatsby-theme-bodiless/tsconfig.cjs.json
+++ b/packages/gatsby-theme-bodiless/tsconfig.cjs.json
@@ -1,21 +1,22 @@
 {
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
+    "module": "commonjs",
     "rootDir": "src",
-    "outDir": ".",
-    "baseUrl": "."
+    "outDir": "./cjs",
+    "baseUrl": ".",
+    "allowJs": false
   },
   "include": [
-    "src"
-  ],
-  "exclude": [
     "./src/dist/fsLogger.ts",
     "./src/dist/fsLogHandler.ts",
-    "./src/dist/DefaultContent",
+    "./src/dist/GatsbyImage/GatsbyImagePresets.ts",
+    "./src/dist/DefaultContent"
+  ],
+  "exclude": [
     "lib",
-    "src/**/scripts/**/*.*",
     "node_modules",
     "__tests__/**/*.*",
     "src/**/__tests__/**/*.*"
-  ]
+   ]
 }
