--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -35,6 +35,7 @@
     "@bodiless/cli": "^1.0.0-rc.33",
     "@bodiless/core": "^1.0.0-rc.33",
     "@bodiless/fclasses": "^1.0.0-rc.33",
+    "@bodiless/git": "^1.0.0-rc.33",
     "@bodiless/layouts": "^1.0.0-rc.33",
     "@bodiless/ui": "^1.0.0-rc.33",
     "axios": "^0.21.0",
