--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -60,6 +60,7 @@
     "@bodiless/core": "^1.0.0-rc.33",
     "@bodiless/core-ui": "^1.0.0-rc.33",
     "@bodiless/fclasses": "^1.0.0-rc.33",
+    "@bodiless/git": "^1.0.0-rc.33",
     "@bodiless/layouts": "^1.0.0-rc.33",
     "@bodiless/navigation": "^1.0.0-rc.33",
     "@bodiless/organisms": "^1.0.0-rc.33",
