--- a/packages/gatsby-theme-bodiless/tsconfig.json
+++ b/packages/gatsby-theme-bodiless/tsconfig.json
@@ -6,7 +6,8 @@
     "baseUrl": "."
   },
   "include": [
-    "src"
+    "src",
+    "../../@types/*"
   ],
   "exclude": [
     "./src/dist/fsLogger.ts",
