--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -37,6 +37,7 @@
     "@bodiless/fclasses": "^1.0.0-rc.33",
     "@bodiless/layouts": "^1.0.0-rc.33",
     "@bodiless/ui": "^1.0.0-rc.33",
+    "@bodiless/utils": "^1.0.0-rc.33",
     "axios": "^0.21.0",
     "common-tags": "^1.8.0",
     "copyfiles": "^2.1.1",
