--- a/packages/vital-search/package.json
+++ b/packages/vital-search/package.json
@@ -41,6 +41,7 @@
     "@bodiless/fclasses": "^1.0.0-rc.33",
     "@bodiless/ga4": "^1.0.0-rc.33",
     "@bodiless/search": "^1.0.0-rc.33",
+    "@bodiless/utils": "^1.0.0-rc.33",
     "@bodiless/vital-elements": "^1.0.0-rc.33",
     "@bodiless/vital-layout": "^1.0.0-rc.33",
     "@bodiless/vital-templates": "^1.0.0-rc.33",
