--- a/packages/bodiless-core/package.json
+++ b/packages/bodiless-core/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.33",
     "@bodiless/fclasses": "^1.0.0-rc.33",
+    "@bodiless/utils": "^1.0.0-rc.33",
     "@types/react-tag-autocomplete": "^6.0.0",
     "axios": "^0.21.0",
     "enzyme": "^3.9.0",
