--- a/packages/bodiless-layouts/package.json
+++ b/packages/bodiless-layouts/package.json
@@ -41,6 +41,7 @@
     "@bodiless/cli": "^1.0.0-rc.33",
     "@bodiless/core": "^1.0.0-rc.33",
     "@bodiless/fclasses": "^1.0.0-rc.33",
+    "@bodiless/utils": "^1.0.0-rc.33",
     "axios": "^0.21.0",
     "crypto-js": "^4.1.1",
     "html2canvas": "^1.0.0-rc.3",
