--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.33",
+    "@bodiless/utils": "^1.0.0-rc.33",
     "babel-plugin-preval": "5.0.0",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
