--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -38,6 +38,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@bodiless/utils": "^1.0.0-rc.33",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
