--- a/packages/bodiless-richtext/package.json
+++ b/packages/bodiless-richtext/package.json
@@ -35,6 +35,7 @@
     "@bodiless/core": "^1.0.0-rc.33",
     "@bodiless/fclasses": "^1.0.0-rc.33",
     "@bodiless/hydration": "^1.0.0-rc.33",
+    "@bodiless/utils": "^1.0.0-rc.33",
     "@emotion/core": "^10.0.14",
     "@emotion/css": "^10.0.14",
     "@emotion/styled": "^10.0.14",
