--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "cypress-failed-log": "^2.6.0",
     "debug": "^4.1.1",
     "html2canvas": "^1.0.0-rc.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "start-server-and-test": "^1.12.0",
     "symlink-dir": "^3.0.3"
   },
@@ -90,13 +90,12 @@
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.158",
     "@types/rc-tooltip": "^3.7.1",
-    "@types/react-dom": "^17.0.2",
+    "@types/react-dom": "^18.0.9",
     "@types/react": "^17.0.39",
     "@types/slate": "^0.47.9",
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "axios": "^0.21.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
@@ -105,8 +104,7 @@
     "cypress-xpath": "^1.4.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
-    "enzyme": "^3.9.0",
-    "enzyme-to-json": "^3.3.5",
+    "@testing-library/react": "^13.4.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -127,13 +125,13 @@
     "lerna": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "ora": "^4.0.2",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18.0.0",
     "rimraf": "^2.6.3",
     "syncpack": "^6.2.0",
     "ts-jest": "^26.4.4",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
-    "typedoc": "^0.22.6",
+    "typedoc": "^0.24.4",
     "typedoc-plugin-markdown": "^3.11.3",
     "typescript": "^4.0.0",
     "patch-package": "^6.5.1"
