--- a/packages/bodiless-ga4/package.json
+++ b/packages/bodiless-ga4/package.json
@@ -43,10 +43,11 @@
   },
   "devDependencies": {
     "@types/crypto-js": "4.1.1",
-    "enzyme": "^3.9.0"
+    "enzyme": "^3.9.0",
+    "@testing-library/react": "^13.4.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-helmet": "^6.1.0"
   }
 }
