--- a/packages/bodiless-layouts/package.json
+++ b/packages/bodiless-layouts/package.json
@@ -34,7 +34,7 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^18.0.0"
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.37",
@@ -44,18 +44,18 @@
     "axios": "^0.21.0",
     "crypto-js": "^4.1.1",
     "html2canvas": "^1.0.0-rc.3",
-    "informed": "^3.34.0",
+    "informed": "^4.36.2",
     "lodash": "^4.17.19",
     "md5-hex": "^4.0.0",
     "prop-types": "^15.7.2",
     "rc-tooltip": "^5.1.1",
     "re-resizable": "^4.11.0",
-    "react-sortable-hoc": "^2.0.0",
+    "@dnd-kit/sortable": "^7.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/crypto-js": "4.1.1",
     "@types/rc-tooltip": "^3.7.1",
-    "enzyme": "^3.9.0"
+    "@testing-library/react": "^13.4.0"
   }
 }
