update react-tag-autocomplete version and informed upgrade

--- a/packages/bodiless-core/package.json
+++ b/packages/bodiless-core/package.json
@@ -32,10 +32,10 @@
     "@bodiless/data": "^1.0.0-rc.37",
     "@bodiless/fclasses": "^1.0.0-rc.37",
     "axios": "^0.21.0",
-    "informed": "^4.36.2",
+    "informed": "^4.44.0",
     "lodash": "^4.17.19",
     "rc-tooltip": "^5.1.1",
-    "react-tag-autocomplete": "7.0.0-beta.10",
+    "react-tag-autocomplete": "^7.0.0-rc.5",
     "resize-observer-polyfill": "^1.5.1",
     "universal-cookie": "^4.0.3",
     "uuid": "^3.3.2"
