--- a/packages/bodiless-organisms/package.json
+++ b/packages/bodiless-organisms/package.json
@@ -40,13 +40,13 @@
     "@bodiless/fclasses": "^1.0.0-rc.37",
     "@bodiless/richtext": "^1.0.0-rc.37",
     "@bodiless/richtext-ui": "^1.0.0-rc.37",
-    "@types/react-burger-menu": "^2.6.0",
     "lodash": "^4.17.19",
-    "react-tag-autocomplete": "7.0.0-beta.10",
+    "react-tag-autocomplete": "^7.0.0-rc.5",
     "tailwindcss-aspect-ratio": "^3.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.6.0",
     "@types/uuid": "^3.4.4"
   },
   "peerDependencies": {
