--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run build:lib && npm run build:css && npm run copy",
+    "build": "npm run build:lib",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
@@ -38,7 +38,7 @@
     "@bodiless/core": "^1.0.0-rc.37",
     "@bodiless/fclasses": "^1.0.0-rc.37",
     "autoprefixer": "^10.4.2",
-    "informed": "^4.36.2",
+    "informed": "^4.44.0",
     "lodash": "^4.17.19",
     "postcss": "^8.4.12"
   },
