--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run build:lib",
+    "build": "npm run build:lib && npm run build:css && npm run copy",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
