--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.158",
-    "@types/rc-tooltip": "^3.7.7",
+    "@types/rc-tooltip": "^3.7.1",
     "@types/react-dom": "^18.2.0",
     "@types/react": "^18.2.0",
     "@types/slate": "^0.47.9",
@@ -104,7 +104,8 @@
     "cypress-xpath": "^1.4.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
-    "@testing-library/react": "^13.4.0",
+    "enzyme": "^3.9.0",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -122,6 +123,7 @@
     "jest-haste-map": "^24.5.0",
     "jest-resolve": "^24.5.0",
     "jest-sonar-reporter": "^2.0.0",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.0",
     "lerna": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "ora": "^4.0.2",
