--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -57,9 +57,10 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.4.0",
+    "enzyme": "^3.9.0",
+    "informed": "^3.34.0",
     "@types/common-tags": "^1.8.0",
-    "@types/rc-tooltip": "^3.7.7",
+    "@types/rc-tooltip": "^3.7.1",
     "@types/uuid": "^3.4.4"
   }
 }
