--- a/packages/bodiless-curator/package.json
+++ b/packages/bodiless-curator/package.json
@@ -36,7 +36,7 @@
     "lodash": "^4.17.19"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.4.0"
+    "enzyme": "^3.9.0"
   },
   "peerDependencies": {
     "react": "^18.2.0"
