--- a/packages/bodiless-ga4/package.json
+++ b/packages/bodiless-ga4/package.json
@@ -43,8 +43,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "4.1.1",
-    "enzyme": "^3.9.0",
-    "@testing-library/react": "^13.4.0"
+    "enzyme": "^3.9.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
