--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -37,7 +37,8 @@
     "@bodiless/cli": "^1.0.0-rc.37",
     "babel-plugin-preval": "5.0.0",
     "lodash": "^4.17.19",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "tailwindcss": "^3.0.23"
   },
   "peerDependencies": {
     "react": "^18.2.0"
