--- a/sites/__minimal-next__/package.json
+++ b/sites/__minimal-next__/package.json
@@ -53,7 +53,7 @@
     "lint": "next lint",
     "prestart": "npm run build:docs",
     "serve": "next start -p ${APP_PORT:-9000}",
-    "serve:docs": "docsify serve ./doc",
+    "serve:docs": "docsify serve ./public/generated/doc",
     "start": "run-p -r dev-frontend dev-backend"
   },
   "devDependencies": {
