--- a/sites/__vital-next__/.env.site
+++ b/sites/__vital-next__/.env.site
@@ -39,7 +39,7 @@ ROBOTSTXT_SITEMAP='https://www.example.com/sitemap.xml'
 
 # Location of bodiless documentation
 # BODILESS_DOCS_URL='/___docs'
-BODILESS_DOCS_DESTINATION_PATH='./public/doc'
+BODILESS_DOCS_DESTINATION_PATH='./public/generated/doc'
 
 # The extended backend logging is disabled by default.
 # To enable it - uncomment the following line.
@@ -75,3 +75,5 @@ BODILESS_DOCS_API_ENABLED=1
 # To change default value - uncomment the following line.
 # BODILESS_DEFAULT_CONTENT_AUTO_DISCOVERY_DEPTH='1'
 
+# The relative path starting from ./public where to store generated files.
+BODILESS_GENERATED_DESTINATION_PATH='generated'
