Fix Statoscope plugin and vital-demo-next config files

--- a/sites/vital-demo-next/.env.site
+++ b/sites/vital-demo-next/.env.site
@@ -73,5 +73,6 @@ BODILESS_DOCS_API_ENABLED=1
 BODILESS_GENERATED_DESTINATION_PATH='generated'
 
 
+BODILESS_STATS_PATH='./public/generated'
 BODILESS_BUILD_STATS=1
 # BODILESS_OPEN_STATS=1
