--- a/packages/bodiless-next/package.json
+++ b/packages/bodiless-next/package.json
@@ -44,17 +44,13 @@
     "plaiceholder": "^2.5.0",
     "webpack": "^5.69.1",
     "react-helmet": "^6.1.0",
-    "glob": "^7.1.6"
-  },
-  "devDependencies": {
-    "@types/uuid": "^3.4.4",
+    "glob": "^7.1.6",
     "autoprefixer": "^10.4.2",
     "dotenv": "^8.2.0",
     "tailwindcss": "^3.0.23",
     "css-loader": "^5.2.7",
     "style-loader": "^2.0.0",
     "mini-css-extract-plugin": "^2.7.2",
-    "@types/react-helmet": "^6.1.0",
     "generate-robotstxt": "^8.0.3",
     "sitemap": "^7.1.1",
     "minimatch": "^3.0.4",
@@ -62,6 +58,10 @@
     "node-cache": "^5.1.2",
     "postcss-url": "^10.1.3",
     "sharp": "^0.30.7"
+  },
+  "devDependencies": {
+    "@types/uuid": "^3.4.4",
+    "@types/react-helmet": "^6.1.0"
   },
   "peerDependencies": {
     "react": "^18.2.0"
