--- a/sites/__minimal-next__/package.json
+++ b/sites/__minimal-next__/package.json
@@ -22,6 +22,7 @@
     "@bodiless/richtext-ui": "^1.0.0-rc.37",
     "@bodiless/next": "^1.0.0-rc.37",
     "@bodiless/ui": "^1.0.0-rc.37",
+    "@bodiless/webpack": "^1.0.0-rc.37",
     "autoprefixer": "^10.4.2",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
