--- a/packages/bodiless-next/package.json
+++ b/packages/bodiless-next/package.json
@@ -57,7 +57,8 @@
     "fast-glob": "^3.2.5",
     "node-cache": "^5.1.2",
     "postcss-url": "^10.1.3",
-    "sharp": "^0.30.7"
+    "sharp": "^0.30.7",
+    "path-browserify": "^1.0.1"
   },
   "devDependencies": {
     "@types/uuid": "^3.4.4",
