--- a/packages/bodiless-next/package.json
+++ b/packages/bodiless-next/package.json
@@ -48,8 +48,6 @@
     "autoprefixer": "^10.4.2",
     "dotenv": "^8.2.0",
     "tailwindcss": "^3.0.23",
-    "css-loader": "^5.2.7",
-    "style-loader": "^2.0.0",
     "mini-css-extract-plugin": "^2.7.2",
     "generate-robotstxt": "^8.0.3",
     "sitemap": "^7.1.1",
@@ -58,7 +56,12 @@
     "node-cache": "^5.1.2",
     "postcss-url": "^10.1.3",
     "sharp": "^0.30.7",
-    "path-browserify": "^1.0.1"
+    "path-browserify": "^1.0.1",
+    "file-loader": "^6.2.0",
+    "null-loader": "^4.2.1",
+    "css-loader": "^5.2.7",
+    "postcss-loader": "^5.3.0",
+    "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "@types/uuid": "^3.4.4",
