--- a/sites/__vital_next__/package.json
+++ b/sites/__vital_next__/package.json
@@ -11,7 +11,7 @@
     "test": "__tests__"
   },
   "dependencies": {
-    "--vital--": "^1.0.0-rc.37",
+    "--vital-next--": "^1.0.0-rc.37",
     "@bodiless/backend": "^1.0.0-rc.37",
     "@bodiless/cli": "^1.0.0-rc.37",
     "@bodiless/components": "^1.0.0-rc.37",
