Address PR feedback, fix default viewport, add ability to pass at site level component befor and after HEAD tags and Body content

--- a/sites/__minimal_next__/tsconfig.json
+++ b/sites/__minimal_next__/tsconfig.json
@@ -1,14 +1,5 @@
 {
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
   "compilerOptions": {
-    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -26,5 +17,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve"
-  }
+  },
+  "include": [
+    "next-env.d.ts",
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
