--- a/sites/vital-demo-next/package.json
+++ b/sites/vital-demo-next/package.json
@@ -86,7 +86,7 @@
     "serve": "next start -p ${APP_PORT:-9000}",
     "serve:docs": "docsify serve ./public/generated/doc",
     "start": "run-p -r dev-frontend dev-backend",
-    "serve:test": "npm run build && next start serve -p 8005"
+    "serve:test": "npm run build && next start -p 8005"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
