Static Edit environment

--- a/sites/__vital_next__/package.json
+++ b/sites/__vital_next__/package.json
@@ -64,18 +64,22 @@
     "build:lib": "next build",
     "build:search": "create-search-index",
     "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
+    "build:edit": "npm run build",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "rimraf .next next-env.d.ts",
-    "dev-backend": "bodiless-backend",
+    "dev-backend": "BL_IS_EDIT=1 bodiless-backend",
     "dev-frontend": "node --stack-size=3200 ./node_modules/.bin/next dev -p ${APP_PORT:-8000}",
+    "edit-frontend": "run-s build:edit serve:edit",
     "lint": "next lint",
     "docs": "run-s build:docs serve:docs",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
-    "prestart": "run-s build:env-vars build:docs",
+    "prestart": "run-s build:env-vars",
     "search-index": "create-search-index",
     "serve": "next start -p ${APP_PORT:-9000}",
     "serve:docs": "docsify serve ./public/generated/doc",
-    "start": "run-p -r dev-frontend dev-backend"
+    "serve:edit": "next start -p ${APP_PORT:-8000}",
+    "start": "run-p -r edit-frontend dev-backend",
+    "dev": "run-p -r dev-frontend"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
