--- a/packages/bodiless-backend/package.json
+++ b/packages/bodiless-backend/package.json
@@ -33,7 +33,9 @@
     "replace-in-file": "^6.2.0",
     "rimraf": "^2.6.3",
     "tmp": "^0.0.33",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ws": "^8.13.0",
+    "chokidar": "^3.5.3"
   },
   "publishConfig": {
     "access": "public"
