--- a/sites/__minimal__/.env.site
+++ b/sites/__minimal__/.env.site
@@ -6,8 +6,8 @@
 # To disable it - uncomment the following line.
 # BODILESS_BACKEND_SAVE_ENABLED='0'
 
-# Set to 1 to disable the bodiless editor even in dev mode.
-# BODILESS_DISABLE_EDITOR=1
+# Set to 1 to run bodiless editor.
+# BODILESS_IS_EDIT=1
 
 # Git commit paths used by the backend, in our case @bodiless/backend/server.js.
 # APP_GIT_PATH='.'
