--- a/sites/__vital__/.env.site
+++ b/sites/__vital__/.env.site
@@ -8,8 +8,8 @@
 # Or you can disable on a per-branch basis, see bodiless.env.config.js 
 # BODILESS_BACKEND_SAVE_ENABLED='0'
 
-# Set to 1 to disable the bodiless editor even in dev mode.
-# BODILESS_DISABLE_EDITOR=1
+# Set to 1 to run bodiless editor.
+# BODILESS_IS_EDIT=1
 
 # Git commit paths used by the backend, in our case @bodiless/backend/server.js.
 # APP_GIT_PATH='.'
