--- a/packages/bodiless-next/package.json
+++ b/packages/bodiless-next/package.json
@@ -61,7 +61,8 @@
     "sitemap": "^7.1.1",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.23",
-    "webpack": "^5.69.1"
+    "webpack": "^5.69.1",
+    "module-from-string": "^3.3.0"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
