--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -40,6 +40,7 @@
     "@bodiless/fclasses": "^1.0.0-rc.42",
     "@bodiless/ga4": "^1.0.0-rc.42",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.42",
+    "@bodiless/hydration": "^1.0.0-rc.42",
     "@bodiless/next": "^1.0.0-rc.42",
     "@bodiless/schema-org": "^1.0.0-rc.42",
     "@bodiless/vital-card": "^1.0.0-rc.42",
