Add Island management

--- a/packages/vital-demo/package.json
+++ b/packages/vital-demo/package.json
@@ -42,6 +42,7 @@
     "@bodiless/core": "^1.0.0-rc.42",
     "@bodiless/data": "^1.0.0-rc.42",
     "@bodiless/fclasses": "^1.0.0-rc.42",
+    "@bodiless/hydration":  "^1.0.0-rc.42",
     "@bodiless/i18n": "^1.0.0-rc.42",
     "@bodiless/layouts": "^1.0.0-rc.42",
     "@bodiless/layouts-ui": "^1.0.0-rc.42",
