--- a/packages/vital-demo/package.json
+++ b/packages/vital-demo/package.json
@@ -42,10 +42,11 @@
     "@bodiless/core": "^1.0.0-rc.42",
     "@bodiless/data": "^1.0.0-rc.42",
     "@bodiless/fclasses": "^1.0.0-rc.42",
-    "@bodiless/hydration":  "^1.0.0-rc.42",
+    "@bodiless/hydration": "^1.0.0-rc.42",
     "@bodiless/i18n": "^1.0.0-rc.42",
     "@bodiless/layouts": "^1.0.0-rc.42",
     "@bodiless/layouts-ui": "^1.0.0-rc.42",
+    "@bodiless/navigation": "^1.0.0-rc.42",
     "@bodiless/richtext": "^1.0.0-rc.42",
     "@bodiless/richtext-ui": "^1.0.0-rc.42",
     "@bodiless/vital-accordion": "^1.0.0-rc.42",
