feat(vital-carousel): initial setup

--- a/packages/vital-demo/package.json
+++ b/packages/vital-demo/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.42",
+    "@bodiless/carousel": "^1.0.0-rc.42",
     "@bodiless/components": "^1.0.0-rc.42",
     "@bodiless/components-ui": "^1.0.0-rc.42",
     "@bodiless/core": "^1.0.0-rc.42",
