--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -84,6 +84,8 @@
       "@bodiless/ui/*": ["bodiless-ui/src/*"],
       "@bodiless/vital-accordion": ["vital-accordion/src"],
       "@bodiless/vital-accordion/*": ["vital-accordion/src/*"],
+      "@bodiless/vital-carousel": ["vital-carousel/src"],
+      "@bodiless/vital-carousel/*": ["vital-carousel/src/*"],
       "@bodiless/vital-content-listing": ["vital-content-listing/src/"],
       "@bodiless/vital-content-listing/*": ["vital-content-listing/src/*"],
       "@bodiless/vital-buttons": ["vital-buttons/src/"],
