--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -109,7 +109,8 @@
   "devDependencies": {
     "@statoscope/webpack-plugin": "^5.20.1",
     "@types/common-tags": "^1.8.0",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "@loadable/babel-plugin": "^5.15.3"
   },
   "peerDependencies": {
     "gatsby": "^4.11.2",
