--- a/packages/vital-demo/package.json
+++ b/packages/vital-demo/package.json
@@ -42,6 +42,7 @@
     "@bodiless/core": "^1.0.0-rc.42",
     "@bodiless/data": "^1.0.0-rc.42",
     "@bodiless/fclasses": "^1.0.0-rc.42",
+    "@bodiless/ga4": "^1.0.0-rc.42",
     "@bodiless/hydration": "^1.0.0-rc.42",
     "@bodiless/i18n": "^1.0.0-rc.42",
     "@bodiless/layouts": "^1.0.0-rc.42",
@@ -68,6 +69,11 @@
     "@bodiless/vital-templates": "^1.0.0-rc.42",
     "@bodiless/vital-youtube": "^1.0.0-rc.42",
     "lodash": "^4.17.19",
+    "@loadable/component": "^5.15.3",
+    "next": "^13.3.7",
     "tailwindcss": "^3.0.23"
+  },
+  "devDependencies": {
+    "@types/loadable__component": "^5.13.4"
   }
 }
