fix lint errors

--- a/packages/vital-demo/package.json
+++ b/packages/vital-demo/package.json
@@ -68,6 +68,7 @@
     "@bodiless/vital-templates": "^1.0.0-rc.42",
     "@bodiless/vital-youtube": "^1.0.0-rc.42",
     "lodash": "^4.17.19",
+    "pure-react-carousel": "^1.27.6",
     "tailwindcss": "^3.0.23"
   }
 }
