--- a/packages/vital-carousel/package.json
+++ b/packages/vital-carousel/package.json
@@ -44,6 +44,7 @@
     "@bodiless/richtext": "^1.0.0-rc.42",
     "@bodiless/richtext-ui": "^1.0.0-rc.42",
     "@bodiless/table": "^1.0.0-rc.42",
+    "@bodiless/vital-card": "^1.0.0-rc.42",
     "@bodiless/vital-editors": "^1.0.0-rc.42",
     "@bodiless/vital-elements": "^1.0.0-rc.42",
     "@bodiless/vital-image": "^1.0.0-rc.42",
